fix: attempt to fix 403